# chaingammon

./: .claudeignore  .clauderules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  GEMINI.md  MISSION.md  README.md  ROADMAP.md  chaingammon.pptx  chaingammon_plan.md  chaingammonv0.pptx  conftest.py  log.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  test_dance.py  test_gnubg.sh  test_pass.py  test_pos.py  test_services.js  test_startup.py  update_modal.patch  web_readme.html
agent/: agent_profile.py  agent_state_io.py  axl-config.json  career_features.py  challenge_policy.py  challenge_trainer.py  checkpoint_encryption.py  coach_compute_client.py  coach_dialogue.py  coach_service.py  cube_evaluation.py  drand_dice.py  full_board_state.py  gnubg_agent.py  gnubg_distill.py  gnubg_encoder.py  gnubg_net.py  gnubg_onnx.py  gnubg_search.py  gnubg_service.py  gnubg_state.py  move_tagger.py  og_compute_eval_client.py  og_storage_download.py  og_storage_upload.py  onnx_board_state.py  pyproject.toml  round_robin_trainer.py  rules_engine.py  sample_trainer.py  search.py  sklearn_agent.py  start.sh  team_challenge_trainer.py  teammate_selection.py
agent/data/: gnubg_core.pt
agent/tests/: test_agent_profile.py  test_career_features.py  test_challenge_policy.py  test_challenge_trainer.py  test_checkpoint_encryption.py  test_coach_dialogue.py  test_coach_service.py  test_coach_service_chat.py  test_drand_dice.py  test_full_board_dispatch.py  test_full_board_state.py  test_gnubg_agent.py  test_gnubg_distill.py  test_gnubg_encoder.py  test_gnubg_net.py  test_gnubg_onnx.py  test_gnubg_search.py  test_gnubg_service.py  test_gnubg_state.py  test_model_agnostic_style.py  test_og_compute_eval_client.py  test_og_storage_download.py  test_og_storage_upload.py  test_phase76_chief_of_staff.py  test_phase76_move_tagger.py  test_round_robin.py  test_rules_engine.py  test_sample_trainer.py  test_sklearn_agent.py  test_status_file.py  test_teammate_selection.py
server/: .env.example  README.md  SHORTLIST.md  chaingammon-server.service  pyproject.toml  test_match_id.py  test_sim.py  test_sim2.py  test_sim3.py  test_sim4.py  test_turn.py
server/app/: agent_cube_decision.py  agent_overlay.py  agent_wallets.py  chain_client.py  deployments.py  ens_client.py  game_record.py  game_state.py  gnubg_client.py  keeper_workflow.py  main.py  main_gnubg_legacy.py  team_mode.py  (+5 more)
(+371 files in other folders)
