[project]
name = "agent"
version = "0.1.0"
description = "Chaingammon AXL node — gnubg + coach services."
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.3.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "uvicorn>=0.29.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
