[project]
name = "agent"
version = "0.1.0"
description = "Chaingammon local agent — gnubg FastAPI service (the coach LLM now runs on 0G Compute)."
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.3.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "torch>=2.2.0",
    "uvicorn>=0.29.0",
    "cryptography>=47.0.0",
    "python-dotenv>=1.0.0",
    "tensorboard>=2.20.0",
    "onnxruntime>=1.26.0",
    "scikit-learn>=1.4",
    "skl2onnx>=1.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
